--- a/index.html
+++ b/index.html
@@ -1254,12 +1254,13 @@ var elementorFrontendConfig = {"environmentMode":{"edit":false,"wpPreview":false
 <script src="elements-handlers.min.js%2540ver%253D3.24.4" id="pro-elements-handlers-js"></script>
 	
 
+
 <script>
 let soundPlayed = false;
 
 function playSound() {
     if (!soundPlayed) {
-        const audio = new Audio('https://respostaspremiada.com/venda/cash.mp3');
+        const audio = new Audio('https://lucrecomaopiniao.shop/venda/venda/cash.mp3');
         audio.play()
             .then(() => {
                 console.log("Som tocado com sucesso!");
